--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "django>=5.1.5",
     "djangorestframework>=3.15.2",
     "pillow>=11.1.0",
+    "requests>=2.32.3",
 ]
 
 [dependency-groups]
